# Cablegram

./: .buildconfig  meson.build  org.gnome.Cablegram.json  org.gnome.Cablegram.json~  requirements.txt
_build/: .ninja_deps  .ninja_log  build.ninja
_build/data/: org.gnome.Cablegram.appdata.xml
_build/meson-logs/: meson-log.txt
_build/src/: cablegram  cablegram.gresource
cablegram/: cablegram.in  chat_view.py  login.py  main.py  meson.build  sidebar.py  sidebar.ui~  universe_window.py
cablegram/wrapper/: dialog.py  universe.py
data/: meson.build  org.gnome.Cablegram.appdata.xml.in  org.gnome.Cablegram.desktop.in  org.gnome.Cablegram.gschema.xml
po/: POTFILES  meson.build
repo/: summary
repo/refs/heads/app/org.gnome.Cablegram/x86_64/: master
src/: cablegram.gresource.xml  cablegram.in  chat_view.py  login.css  login.py  login.ui  login.ui~  main.py  meson.build  sidebar.py  sidebar.ui  sidebar.ui~  universe.css  universe.py  universe.ui  universe.ui~  universe_window.py  window.py  window.ui
style/: cablegram.gresource.xml  login.css  meson.build
ui/: cablegram.gresource.xml  login.ui  meson.build  sidebar.ui  universe.ui  universe.ui~
